app/styles/ember-arcgis-portal-components.scss
.portal-search-form {
  border-bottom: 1px solid $calcite-gray-light;
  .clear-button {
    z-index: 10;
    pointer-events: auto;
  }
  .input-group div.has-clear.has-feedback input {
    border: none;
    box-shadow: none;
    -webkit-box-shadow: none;
  }
  button {
    background-color: transparent;
    border: 0px;
  }
}
div.panel-body:has(.item-picker) {
  padding: 15px 15px 0px 15px;
}
.item-picker {
  position: relative;
  min-height: 45rem;
  padding: 0% 2.5%;
  .item-picker-datasets-pane, .item-picker-items-pane {
    min-height: 55rem;
  }
  ul.pagination {
    //margin:0px;
    margin: 0 0 15px 0;
  }
  .item-picker-status {
    .btn, .btn-link {
      padding: 0px 12px;
    }
    padding: 6px 0px;
    height: 33px;
    margin: 8px 0;
  }
  ul.results-list {
    padding: 0;
    li:nth-child(even) {
      background: $calcite-gray-lightest
    }
    li {
      list-style: none;
      padding: 0;
      a {
        padding: 1rem;
        display: block;
        font-size: 1rem;
        h2 {
          // controls the contents of the item rows
          margin: 0; // width: 250px;
          white-space: nowrap;
          overflow: hidden;
          text-overflow: ellipsis;
          font-size: $font-size-base;
          font-weight: 600;
        }
        .shared-by {
          color: $off-black;
        }
      }
      .item-picker-item-results-item-type {
        margin-top: 8px;
        margin-right: 10px;
      }
      &.is-selected {
        background-color: $calcite-blue-lightest;
      }
      &.select-multiple {
        a:first-child {
          display: inline-block;
        }
        .item-picker-item-results-item-inner {
          display: inline-block;
          padding-left: 30px;
        }
        .checkbox-inline {
          display: inline;
        }
        .magic-checkbox {
          position: absolute;
          display: none;
        }
        .magic-checkbox[disabled] {
          cursor: not-allowed;
        }
        .magic-checkbox+span {
          position: relative;
          display: block;
          padding-left: 30px;
          cursor: pointer;
          vertical-align: middle;
        }
        .magic-checkbox+span:hover:before {
          animation-duration: 0.4s;
          animation-fill-mode: both;
          animation-name: hover-color;
        }
        .magic-checkbox+span:before {
          position: absolute;
          top: 0;
          left: 0;
          display: inline-block;
          width: 20px;
          height: 20px;
          content: '';
          border: 1px solid $calcite-gray-darker;
        }
        .magic-checkbox+span:after {
          position: absolute;
          display: none;
          content: '';
        }
        .magic-checkbox[disabled]+span {
          cursor: not-allowed;
          color: $calcite-gray-core;
        }
        .magic-checkbox[disabled]+span:hover, .magic-checkbox[disabled]+span:before, .magic-checkbox[disabled]+span:after {
          cursor: not-allowed;
        }
        .magic-checkbox[disabled]+span:hover:before {
          border: 1px solid $calcite-gray-core;
          animation-name: none;
        }
        .magic-checkbox[disabled]+span:before {
          border-color: $calcite-gray-core;
        }
        .magic-checkbox:checked+span:before {
          animation-name: none;
        }
        .magic-checkbox:checked+span:after {
          display: block;
        }
        .magic-checkbox+span:before {
          border-radius: 3px;
        }
        .magic-checkbox+span:after {
          top: 2px;
          left: 7px;
          box-sizing: border-box;
          width: 6px;
          height: 12px;
          transform: rotate(45deg);
          border-width: 2px;
          border-style: solid;
          border-color: $white;
          border-top: 0;
          border-left: 0;
        }
        .magic-checkbox:checked+span:before {
          border: $calcite-blue-dark;
          background: $calcite-blue-dark;
        }
        .magic-checkbox:checked[disabled]+span:before {
          border: $calcite-blue-dark;
          background: $calcite-blue-dark;
        }
      }
    }
  }
  .item-picker-radio-buttons {
    border-right: 1px solid $calcite-gray-lightest;
    padding-left: 0px;
    padding-right: 0px;
    [type="radio"] {
      display: none;
    }
    label {
      display: block;
      cursor: pointer;
      background-color: $white;
      padding: 10px;
      border-bottom: 1px solid $calcite-gray-lightest;
      border-left: 1px solid $calcite-gray-lightest;
      margin-bottom: 0px;
      margin-left: 15px;
      span {
        font-weight: normal;
      }
    }
    label:first-of-type {
      border-top: 1px solid $calcite-gray-lightest;
    }
    [type="radio"]+span:before {
      display: block;
    }
    .checked {
      background-color: $calcite-blue-lightest;
    }
  }
  .item-picker-current-item {
    // This is styling for the drawer that
    // holds the metadata for the item
    z-index: 4;
    padding: 15px;
    position: absolute;
    top: 33px;
    left: 55%;
    right: 0;
    bottom: 0;
    margin-bottom: -15px;
    background-color: $white;
    border-top: solid 1px $calcite-gray-lighter;
    border-left: solid 1px $calcite-gray-lighter;
    box-shadow: -6px 0px 6px -6px $calcite-gray-lighter;
    h4 {
      font-size: $font-size-h4;
      margin: 10px 0px;
    }
    .item-picker-current-item-preview {
      display: flex;
      flex-direction: column;
      overflow: auto;
      height: 100%;
      img {
        height: 133px;
      }
      h2 {
        font-size: $font-size-h4;
        color: $off-black;
        margin: 0px auto 15px auto;
        font-weight: 500;
      }
      .shared-by-owner {
        font-size: 14px;
        display: inline-block;
      }
      .item-picker-current-item-preview-description {
        overflow: hidden;
        flex: 0 1 auto;
        position: relative;
        margin-top: 5%;
        .text-fade {
          width: 100%;
          height: 13px;
          position: absolute;
          bottom: 0px;
          box-shadow: inset 0px -33px 32px -23px $white;
        }
      }
      .item-picker-current-item-preview-meta {
        font-size: 14px;
        margin-bottom: 15px;
        .glyphicon {
          margin-right: 5px;
        }
      }
    }
    .item-picker-controls {
      display: flex;
      margin-top: auto;
      flex-direction: column;
      width: 100%;
      border-spacing: 15px;
      background-color: $white;
      padding-top: 15px;
      .full-width-btn {
        display: flex;
        margin-bottom: 15px;
        padding-left: 15px;
        button {
          flex: 1;
        }
      }
      .side-by-side {
        display: flex;
        padding-left: 15px;
        margin-bottom: 15px;
        align-items: baseline;
        justify-content: space-between;
        .back-btn {
          flex: 1;
          margin-right: 5px
        }
        .preview-btn {
          flex: 1;
          margin-left: 5px
        }
      }
    }
    .item-picker-current-dataset-preview-field-list {
      list-style: none;
      padding: 0;
      margin: 0;
      li {
        float: left;
        margin: 5px 5px 5px 0;
        border: 1px solid $calcite-gray-lighter;
        padding: 0;
        text-align: center;
        outline: 0px solid transparent;
        width: auto;
        -moz-transition: border-color 1s ease-in, outline 1s ease-in;
        /* FF3.7+ */
        -o-transition: border-color 1s ease-in, outline 1s ease-in;
        /* Opera 10.5 */
        -webkit-transition: border-color 1s ease-in, outline 1s ease-in;
        /* Saf3.2+, Chrome */
        transition: border-color 1s ease-in, outline 1s ease-in;
        &.fade-outline {
          border-color: $calcite-blue-core;
          outline: 1px solid $calcite-blue-core;
        }
        .chart-button {
          background: none;
          border: none;
          padding: 10px;
          &:hover {
            background-color: $calcite-blue-core;
            color: $white;
            fill: $white;
          }
          &:focus {
            background-color: $calcite-blue-core;
            color: $white;
            fill: $white;
          }
          svg {
            display: inline-block;
            margin: 0 auto;
            height: 12px;
            width: 12px;
          }
        }
      }
    }
  }
  .item-picker-results-container {
    margin: 25px 0px;
  }
  .flex-row {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
  }
}
.layer-picker-list {
  margin-top: 15px;
  overflow: scroll;
  max-height: 100px;
  .magic-radio {
    position: absolute;
    display: none;
  }
  .magic-radio[disabled] {
    cursor: not-allowed;
  }
  .magic-radio+label {
    position: relative;
    display: block;
    padding-left: 30px;
    cursor: pointer;
    vertical-align: middle;
  }
  .magic-radio+label:hover:before {
    animation-duration: 0.4s;
    animation-fill-mode: both;
    animation-name: hover-color;
  }
  .magic-radio+label:before {
    position: absolute;
    top: 0;
    left: 0;
    display: inline-block;
    width: 20px;
    height: 20px;
    content: '';
    border: 1px solid $calcite-gray-darker;
  }
  .magic-radio+label:after {
    position: absolute;
    display: none;
    content: '';
  }
  .magic-radio[disabled]+label {
    cursor: not-allowed;
    color: $calcite-gray-core;
  }
  .magic-radio[disabled]+label:hover, .magic-radio[disabled]+label:before, .magic-radio[disabled]+label:after {
    cursor: not-allowed;
  }
  .magic-radio[disabled]+label:hover:before {
    border: 1px solid $calcite-gray-core;
    animation-name: none;
  }
  .magic-radio[disabled]+label:before {
    border-color: $calcite-gray-core;
  }
  .magic-radio:checked+label:before {
    animation-name: none;
  }
  .magic-radio:checked+label:after {
    display: block;
  }
  .magic-radio+label:before {
    border-radius: 50%;
  }
  .magic-radio+label:after {
    top: 6px;
    left: 6px;
    width: 8px;
    height: 8px;
    border-radius: 80%;
    background: $calcite-blue-dark;
  }
  .magic-radio:checked+label:before {
    border: 1px solid $calcite-blue-dark;
  }
  .magic-radio:checked[disabled]+label:before {
    border: 1px solid $calcite-blue-dark;
  }
  .magic-radio:checked[disabled]+label:after {
    background: $calcite-blue-dark;
  }
}

